--- a/main/templates/main/pages/home.html
+++ b/main/templates/main/pages/home.html
@@ -6,7 +6,23 @@
     <main>
         <div class='content'>
         </div>
-        <footer>aqui é o footer</footer>
+        
     </main>
 </body>
 </html>
+
+
+<style>
+header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: #007bff;
+    padding: 1em;
+    color: white;
+    text-align: center;
+    z-index: 1000;
+}
+
+</style>
