--- a/client/templates/client/pages/register.html
+++ b/client/templates/client/pages/register.html
@@ -53,32 +53,9 @@
             background-color: #f8f9fa;
             margin: 0;
             padding: 20px;
-        }
-
-        .content {
-            max-width: 600px;
-            margin: auto;
-            background: #ffffff;
-            border-radius: 10px;
-            padding: 20px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-            height: auto;
-        }
-
-        .btn-back {
-            background-color: #6c757d;
-            color: white;
-            border: none;
-            padding: 10px 15px;
-            border-radius: 5px;
-            cursor: pointer;
-            text-decoration: none;
-        }
-
-        .btn-back:hover {
-            background-color: #5a6268;
-            margin: 0;
-            font-family: Arial, sans-serif;
+            display: flex;
+            flex-direction: column; /* Adiciona flexbox para o layout vertical */
+            align-items: center; /* Centraliza horizontalmente */
         }
 
         header {
@@ -95,16 +72,33 @@
 
         .content {
             width: 85vw;
-            min-height: 85vh;
+            max-width: 600px;
+            min-height: 85vh; /* Altura mínima para manter o conteúdo na tela */
             display: flex;
             flex-direction: column;
             align-items: center;
             gap: 1em;
             margin-top: 5em; /* Espaço para o header fixo */
+            background: #ffffff;
+            border-radius: 10px;
+            padding: 20px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
 
-        .back-button {
-            margin-top: 1em; /* Adiciona espaço acima do botão "Voltar" */
+        .btn-back {
+            background-color: #007bff;
+            color: white;
+            border: none;
+            padding: 10px 15px;
+            border-radius: 5px;
+            cursor: pointer;
+            text-decoration: none;
+        }
+
+        .btn-back:hover {
+            background-color: #0056b3;
+            margin: 0;
+            font-family: Arial, sans-serif;
         }
 
         h1 {
@@ -118,20 +112,20 @@
             width: 100%;
             margin-bottom: 1em;
         }
-    
+
         .message {
             padding: 1em;
             margin-bottom: 0.5em;
             border-radius: 5px;
             font-weight: bold;
         }
-    
+
         .message.success {
             color: #155724;
             background-color: #d4edda;
             border: 1px solid #c3e6cb;
         }
-    
+
         .message.error {
             color: #721c24;
             background-color: #f8d7da;
@@ -177,8 +171,6 @@
         form button:hover {
             background-color: #0056b3;
         }
-
-      
     </style>
 
     <script src="{% static 'client/js/client.js' %}"></script>
