--- a/employee/templates/employee/pages/home.html
+++ b/employee/templates/employee/pages/home.html
@@ -1,6 +1,6 @@
 {% include "employee/partials/head.html" %}
 <body>
-    {% include "employee/partials/header.html" %}
+    {% include "global/partials/header.html" %}
 
     <main>
         <div class="content">
