--- a/templates/global/partials/header.html
+++ b/templates/global/partials/header.html
@@ -28,7 +28,7 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="/budget/new_budget/">Gerar</a>
               <a class="dropdown-item" href="/budget/search_budget/">Consultar</a>
-              <a class="dropdown-item" href="#">Editar</a>
+              
             </div>
           </li>
           <li class="nav-item dropdown">
@@ -38,7 +38,7 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="/employee/new/">Gerar</a>
               <a class="dropdown-item" href="/employee/search/">Consultar</a>
-              <a class="dropdown-item" href="#">Editar</a>
+              
             </div>
           </li>
           <li class="nav-item dropdown">
@@ -47,7 +47,7 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="/nfe/new-nfe/">Entrada de NF-e</a>
-              <a class="dropdown-item" href="#">Consultar</a>
+              <a class="dropdown-item" href="/nfe/searchnfe/">Consultar</a>
               <a class="dropdown-item" href="#">Editar</a>
             </div>
           </li>
