--- a/budget/templates/budget/pages/new_budget.html
+++ b/budget/templates/budget/pages/new_budget.html
@@ -228,10 +228,12 @@
     }
 
     h1 {
-      font-size: 2em;
-      margin-bottom: 0.5em;
-      text-align: center;
-    }
+    font-size: 2em;
+    margin-bottom: 0.5em;
+    text-align: center;
+    margin-top: 70px; /* Ajuste o valor conforme necessário */
+}
+
 
     form {
       display: flex;
@@ -299,6 +301,20 @@
       width: 100%;
       margin-top: 1em;
     }
+    .add {
+      margin-top: 2px;
+      height: 40px;
+      width: 80px;
+      display: flex;
+      justify-content: center; /* Alinha horizontalmente */
+      align-items: center; /* Alinha verticalmente */
+    }
+
+    .icons {
+      height: 25px;
+      width: 25px;
+    }
+
 
    
   </style>
