--- a/client/templates/client/pages/edit_client.html
+++ b/client/templates/client/pages/edit_client.html
@@ -1,35 +1,60 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {% load static %}
+    {% include "client/partials/head.html" %}
     <title>Editar Cliente</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             background-color: #f4f4f4;
             margin: 0;
+            padding: 0;
+        }
+        
+        header {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            background-color: #007bff;
+            padding: 1em;
+            color: white;
+            text-align: center;
+            z-index: 1000;
+        }
+    
+        main {
+            margin-top: 120px; /* Ajuste conforme a altura do header */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: calc(100vh - 80px); /* Ocupa a altura total da tela, menos o header */
             padding: 20px;
         }
-
+    
         h2 {
             color: #333;
             margin-bottom: 20px;
+            text-align: center;
         }
-
-        form {
+    
+        .form-edit {
+            width: 100%;
+            max-width: 500px; /* Define um limite de largura para o formulário */
             background-color: #fff;
-            padding: 20px;
+            padding: 15px;
             border-radius: 5px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
         }
-
+    
         form label {
             display: block;
             margin-bottom: 5px;
             font-weight: bold;
         }
-
+    
         form input, 
         form button, 
         form select {
@@ -40,7 +65,7 @@
             border-radius: 4px;
             box-sizing: border-box;
         }
-
+    
         form button {
             background-color: #28a745;
             color: #fff;
@@ -48,34 +73,49 @@
             cursor: pointer;
             transition: background-color 0.3s;
         }
-
+    
         form button:hover {
             background-color: #218838;
         }
-
-        a {
-            display: inline-block;
-            margin-top: 20px;
-            text-decoration: none;
-            color: #007bff;
+    
+        .button-cancel {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+            background-color: #28a745;
+            color: #fff;
+            border: none;
+            cursor: pointer;
+            transition: background-color 0.3s;
         }
-
-        a:hover {
+    
+        .button-cancel {
             text-decoration: underline;
+            background-color: #218838;
         }
     </style>
 </head>
 <body>
-    {% include "global/partials/header.html" %}
-    <h2>Editar Cliente: {{ cliente.nome }}</h2>
-
-    <form action="" method="post">
-        {% csrf_token %}
-        {{ form.as_p }}  <!-- Renderiza o formulário com os campos -->
-        <button type="submit">Salvar</button>
-    </form>
-
-    <a href="{% url 'home' %}">Cancelar</a> <!-- Link para voltar à lista de clientes -->
-
+    <header>
+        {% include "global/partials/header.html" %}
+    </header>
+    
+    <main>
+        <div class="form-edit">
+            <h2>Editar Cliente: {{ cliente.nome }}</h2>
+            <form action="" method="post">
+                {% csrf_token %}
+                {{ form.as_p }}  <!-- Renderiza o formulário com os campos -->
+                <button type="submit">Salvar</button>
+                <div class="button-cancel">
+                    <a href="{% url 'home' %}">Cancelar</a> <!-- Link para voltar à lista de clientes -->
+                </div>
+            </form>
+            
+        </div>
+    </main>
 </body>
 </html>
