--- a/client/templates/client/pages/edit_client.html
+++ b/client/templates/client/pages/edit_client.html
@@ -111,7 +111,7 @@
                 {{ form.as_p }}  <!-- Renderiza o formulário com os campos -->
                 <button type="submit">Salvar</button>
                 <div class="button-cancel">
-                    <a href="{% url 'home' %}">Cancelar</a> <!-- Link para voltar à lista de clientes -->
+                    <a href="{% url 'consultar_cliente' %}">Cancelar</a> <!-- Link para voltar à lista de clientes -->
                 </div>
             </form>
             
